# vrm-utils-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/vrm-spec/: Cargo.toml  README.md
crates/vrm-spec/src/: lib.rs  serde_utils.rs  vrm_0_0.rs  vrmc_materials_mtoon_1_0.rs  vrmc_spring_bone_1_0.rs
crates/vrm-spec/src/vrmc_vrm_1_0/: expression_preset_name.rs  human_bone_name.rs  mod.rs
crates/vrm-spec/tests/: test.rs
crates/vrm-spec/tests/snapshots/: test__vrm0.snap  test__vrm1-2.snap  test__vrm1.snap
examples/vrm-spec-example/: Cargo.toml  README.md
examples/vrm-spec-example/examples/: vrm-spec-example.rs
fixtures/: README.md
