[workspace.package]
authors = ["pixiv"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.68"

[workspace]
members = [
  "crates/*",
  "examples/*",
]
# https://github.com/rust-lang/cargo/issues/10112
resolver = "2"

[workspace.dependencies]
gltf = {version = "1", features = ["utils", "extensions", "extras"]}
insta = "=1.39.0"
rustc-hash = "< 3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
